<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.binarybricks.pragya.angellistconcept.FilterActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/toolbar"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_sort_by"
        android:textSize="@dimen/text_size_sortBy"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/horizontal_line_height_large"
        android:layout_marginTop="@dimen/margin_top_small"
        android:background="@color/colorDivider" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="@dimen/margin_top_medium"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_most_recent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/radio_button_margin_right"
            android:buttonTint="@color/colorAccent"
            android:checked="true"
            android:text="@string/radio_most_recent"
            android:textSize="@dimen/radio_text_size" />

        <RadioButton
            android:id="@+id/radio_most_relevant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorAccent"
            android:text="@string/radio_most_relevant"
            android:textSize="@dimen/radio_text_size" />
    </RadioGroup>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_large"
        android:text="@string/filter_location"
        android:textSize="@dimen/location_text_size"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/horizontal_line_height_large"
        android:layout_marginTop="@dimen/margin_top_small"
        android:background="@color/colorDivider" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_medium"
        android:text="@string/location_san_francisco_ca"
        android:textSize="@dimen/location_detail_text_size"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_location_detail"
        android:text="@string/location_within_25_miles"
        android:textSize="@dimen/location_detail_text_size" />

    <SeekBar
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_medium"
        android:progress="25"
        android:secondaryProgress="100" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_large"
        android:text="@string/filter_company"
        android:textSize="@dimen/filter_company_text_size"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/horizontal_line_height_large"
        android:layout_marginTop="@dimen/margin_top_small"
        android:background="@color/colorDivider" />
    </LinearLayout>
</RelativeLayout>
