<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.binarybricks.pragya.angellistconcept.JobSearchActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@android:color/white"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@drawable/job_search_background"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">


            <EditText
                android:id="@+id/etSearchJobTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_top_medium"
                android:drawablePadding="@dimen/padding_small"
                android:drawableLeft="@android:drawable/ic_menu_search"
                android:hint="@string/search_job_title"
                android:textColor="@color/colorTextIcons"
                android:textColorHint="@color/colorDivider"
                android:textSize="@dimen/search_job_title_size" />


            <EditText
                android:id="@+id/etSetLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etSearchJobTitle"
                android:layout_margin="@dimen/margin_top_medium"
                android:drawablePadding="@dimen/padding_small"
                android:drawableLeft="@android:drawable/ic_menu_compass"
                android:hint="@string/set_job_location"
                android:textColor="@color/colorTextIcons"
                android:textColorHint="@color/colorDivider"
                android:textSize="@dimen/search_location_size" />

            <Button
                android:id="@+id/btnSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etSetLocation"
                android:layout_centerInParent="true"
                android:background="@color/colorSearchBackground"
                android:layout_marginRight="@dimen/margin_top_medium"
                android:layout_marginLeft="@dimen/margin_top_medium"
                android:text="@string/search_button_text"
                android:textColor="@color/colorTextIcons" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <TextView
                android:id="@+id/tvPastJob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_top_medium"
                android:text="@string/past_job_search"
                android:textSize="@dimen/past_job_search_size" />

            <!-- A placeholder scroll view, ideally this should be listview with recent searches -->
            <ScrollView
                android:layout_below="@+id/tvPastJob"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/ivRecent"
                            android:layout_width="@dimen/recent_history_image_size"
                            android:layout_height="@dimen/recent_history_image_size"
                            android:layout_centerVertical="true"
                            android:layout_margin="@dimen/margin_top_medium"
                            android:tint="#000000"
                            android:src="@android:drawable/ic_menu_recent_history" />

                        <LinearLayout
                            android:layout_toRightOf="@+id/ivRecent"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:orientation="vertical">


                            <TextView
                                android:id="@+id/tvCompanyName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/colorPrimaryText"
                                android:textSize="@dimen/filter_company_text_size"
                                android:text="@string/android_developer" />

                            <TextView
                                android:id="@+id/tvJobTitle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:textColor="@color/colorSecondaryText"
                                android:text="@string/set_job_location" />
                        </LinearLayout>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_marginTop="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/ivRecent"
                            android:layout_width="@dimen/recent_history_image_size"
                            android:layout_height="@dimen/recent_history_image_size"
                            android:layout_centerVertical="true"
                            android:layout_margin="@dimen/margin_top_medium"
                            android:tint="#000000"
                            android:src="@android:drawable/ic_menu_recent_history" />

                        <LinearLayout
                            android:layout_toRightOf="@+id/ivRecent"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:orientation="vertical">


                            <TextView
                                android:id="@+id/tvCompanyName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/colorPrimaryText"
                                android:textSize="@dimen/filter_company_text_size"
                                android:text="@string/mobile_developer" />

                            <TextView
                                android:id="@+id/tvJobTitle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:textColor="@color/colorSecondaryText"
                                android:text="@string/set_job_location" />
                        </LinearLayout>
                    </RelativeLayout>


                </LinearLayout>

            </ScrollView>
        </RelativeLayout>
</LinearLayout>
